--- a/index.html
+++ b/index.html
@@ -13,56 +13,62 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <a href="index.html" class="navbar-brand">LOGO DIGITAL OCEAN</a>
-            <button class="navbar-toggle collapsed">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div class="collapse navbar-collpse">
-            <ul class="nav navbar-nav">
-            <li> <a href="#">products</a></li>
-            <li><a href="#">customers</a></li>
-            <li> <a href="#">community</a></li>
-            <li> <a href="#">pircing</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <div class="bg_header">
+      <div class="container">
         <div class="row">
-          <div class="col-lg-7 jumbotron">
-            <h1>Ciao mondo pazzo!</h1>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nulla quia, ab illo obcaecati consequuntur hic distinctio rerum a fugit.
-            </p>
-          </div>
-          <div class="col-lg-5 jumbotron">
-            <form>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+              <div class="navbar-header">
+                <a href="index.html" class="navbar-brand">LOGO DIGITAL OCEAN</a>
+                <button class="navbar-toggle collapsed">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
               </div>
-              <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <div class="collapse navbar-collpse">
+                <ul class="nav navbar-nav">
+                <li> <a href="#">products</a></li>
+                <li><a href="#">customers</a></li>
+                <li> <a href="#">community</a></li>
+                <li> <a href="#">pircing</a></li>
+                </ul>
               </div>
-              <div class="form-group">
-                <label for="exampleInputFile">File input</label>
-                <input type="file" id="exampleInputFile">
-                <p class="help-block">Example block-level help text here.</p>
-              </div>
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox"> Check me out
-                </label>
-              </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form>
+            </div>
+          </nav>
+        </div>
+      </div>
+      <div class="bg_header">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-7 jumbotron">
+              <h1>Ciao mondo pazzo!</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nulla quia, ab illo obcaecati consequuntur hic distinctio rerum a fugit.
+              </p>
+            </div>
+            <div class="col-lg-5 jumbotron">
+              <form>
+                <div class="form-group">
+                  <label for="exampleInputEmail1">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputFile">File input</label>
+                  <input type="file" id="exampleInputFile">
+                  <p class="help-block">Example block-level help text here.</p>
+                </div>
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox"> Check me out
+                  </label>
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -130,26 +136,28 @@
       <!-- carousel section jumbo -->
       <section class="jumbotron">
         <div class="container">
-          <div class="col-lg-12 text-center">
-            <h2 class="text-capitalize">disigned for developers</h2>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, tempore accusantium velit, eius consequatur magnam.</p>
-          </div>
-          <div class="col-lg-2">
-            freccia sx
-          </div>
-          <div class="col-lg-8">
-            img carousel
-          </div>
-          <div class="col-lg-2">
-            freccia dx
-          </div>
-          <div class="col-lg-12 text-center">
-            <h4 class="text-center">titolo sotto carousel</h4>
-          </div>
-          <div class="col-lg-12 text-center">
-            <span>pallino</span>
-            <span>pallino</span>
-            <span>pallino</span>
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <h2 class="text-capitalize">disigned for developers</h2>
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, tempore accusantium velit, eius consequatur magnam.</p>
+            </div>
+            <div class="col-lg-2">
+              freccia sx
+            </div>
+            <div class="col-lg-8">
+              img carousel
+            </div>
+            <div class="col-lg-2">
+              freccia dx
+            </div>
+            <div class="col-lg-12 text-center">
+              <h4 class="text-center">titolo sotto carousel</h4>
+            </div>
+            <div class="col-lg-12 text-center">
+              <span>pallino</span>
+              <span>pallino</span>
+              <span>pallino</span>
+            </div>
           </div>
         </div>
       </section>
@@ -194,62 +202,286 @@
       </section>
       <!-- /customer service section -->
       <!-- cities connection section -->
-      <section class="jumbtron">
+      <section class="jumbotron">
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
               <h2 class="text-center">
-                testo velocità connesione
+                testo section blue
               </h2>
             </div>
+            <!-- colonnasx blue -->
             <div class="col-lg-6">
-              <div class="container">
-                <div class="row">
-                  <div class="col-lg-12">
-                    <div class="container">
-                      <div class="row">
-                        <div class="col-lg-4">
-                          testosx
-                        </div>
-                        <div class="col-lg-4">
-                          testomd
-                        </div>
-                        <div class="col-lg-4">
-                          testodx
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <span>ams</span>
+                </div>
+                <div class="col-lg-6">
+                  <span>città test</span>
+                </div>
+                <div class="col-lg-3">
+                <span><a href="" class="text-capitalize">
+                  speed test
+                </a></span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <span>ams</span>
+                </div>
+                <div class="col-lg-6">
+                  <span>città test</span>
+                </div>
+                <div class="col-lg-3">
+                <span><a href="" class="text-capitalize">
+                  speed test
+                </a></span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <span>ams</span>
+                </div>
+                <div class="col-lg-6">
+                  <span>città test</span>
+                </div>
+                <div class="col-lg-3">
+                <span><a href="" class="text-capitalize">
+                  speed test
+                </a></span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <span>ams</span>
+                </div>
+                <div class="col-lg-6">
+                  <span>città test</span>
+                </div>
+                <div class="col-lg-3">
+                <span><a href="" class="text-capitalize">
+                  speed test
+                </a></span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <span>ams</span>
+                </div>
+                <div class="col-lg-6">
+                  <span>città test</span>
+                </div>
+                <div class="col-lg-3">
+                <span><a href="" class="text-capitalize">
+                  speed test
+                </a></span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <span>ams</span>
+                </div>
+                <div class="col-lg-6">
+                  <span>città test</span>
+                </div>
+                <div class="col-lg-3">
+                <span><a href="" class="text-capitalize">
+                  speed test
+                </a></span>
                 </div>
               </div>
             </div>
+            <!-- /colonnasx blue -->
+            <!-- colonnadx blue -->
             <div class="col-lg-6">
-              <div class="container">
-                <div class="row">
-                  <div class="col-lg-12">
-                    <div class="container">
-                      <div class="row">
-                        <div class="col-lg-4">
-                          testosx
-                        </div>
-                        <div class="col-lg-4">
-                          testomd
-                        </div>
-                        <div class="col-lg-4">
-                          testodx
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <span>ams</span>
+                </div>
+                <div class="col-lg-6">
+                  <span>città test</span>
+                </div>
+                <div class="col-lg-3">
+                <span><a href="" class="text-capitalize">
+                  speed test
+                </a></span>
                 </div>
               </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <span>ams</span>
+                </div>
+                <div class="col-lg-6">
+                  <span>città test</span>
+                </div>
+                <div class="col-lg-3">
+                <span><a href="" class="text-capitalize">
+                  speed test
+                </a></span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <span>ams</span>
+                </div>
+                <div class="col-lg-6">
+                  <span>città test</span>
+                </div>
+                <div class="col-lg-3">
+                <span><a href="" class="text-capitalize">
+                  speed test
+                </a></span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <span>ams</span>
+                </div>
+                <div class="col-lg-6">
+                  <span>città test</span>
+                </div>
+                <div class="col-lg-3">
+                <span><a href="" class="text-capitalize">
+                  speed test
+                </a></span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <span>ams</span>
+                </div>
+                <div class="col-lg-6">
+                  <span>città test</span>
+                </div>
+                <div class="col-lg-3">
+                <span><a href="" class="text-capitalize">
+                  speed test
+                </a></span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <span>ams</span>
+                </div>
+                <div class="col-lg-6">
+                  <span>città test</span>
+                </div>
+                <div class="col-lg-3">
+                <span><a href="" class="text-capitalize">
+                  speed test
+                </a></span>
+                </div>
+              </div>
+            </div>
+            <!-- /colonnadx blue -->
+          </div>
+        </div>
+      </section>
+      <!-- /cities connection section -->
+      <!-- carousel 2 -->
+      <section class="jumbotron">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <h2 class="text-capitalize">disigned for developers</h2>
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, tempore accusantium velit, eius consequatur magnam.</p>
+            </div>
+            <div class="col-lg-2">
+              freccia sx
+            </div>
+            <div class="col-lg-8">
+              img carousel
+            </div>
+            <div class="col-lg-2">
+              freccia dx
+            </div>
+            <div class="col-lg-12 text-center">
+              <h4 class="text-center">titolo sotto carousel</h4>
+            </div>
+            <div class="col-lg-12 text-center">
+              <span>pallino</span>
+              <span>pallino</span>
+              <span>pallino</span>
             </div>
           </div>
         </div>
       </section>
+      <!-- /carousel 2 -->
+      <!-- get started section -->
+      <div class="jumbotron">
+        <div class="container">
+          <div class="row">
+            <h2 class="text-center">
+              Get started now!
+            </h2>
+            <div class="btn">create your account
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /get starded section -->
     </main>
     <footer>
-
+      <div class="jumbotron">
+        <div class="container">
+          <div class="row">
+            <div class="col-sx-12 col-sm-12 col-md-6">
+              <ul>
+                <li><strong>prova</strong></li>
+                <li>prova</li>
+                <li>prova</li>
+                <li>prova</li>
+                <li>prova</li>
+              </ul>
+            </div>
+            <div class="col-sx-12 col-sm-12 col-md-6">
+              <ul>
+                <li><strong>prova</strong></li>
+                <li>prova</li>
+                <li>prova</li>
+                <li>prova</li>
+                <li>prova</li>
+              </ul>
+            </div>
+            <div class="col-sx-12 col-sm-12 col-md-6">
+              <ul>
+                <li><strong>prova</strong></li>
+                <li>prova</li>
+                <li>prova</li>
+                <li>prova</li>
+                <li>prova</li>
+              </ul>
+            </div>
+            <div class="col-sx-12 col-sm-12 col-md-6">
+              <ul>
+                <li><strong>prova</strong></li>
+                <li>prova</li>
+                <li>prova</li>
+                <li>prova</li>
+                <li>prova</li>
+              </ul>
+            </div>
+            <div class="col-sx-12 col-sm-12 col-md-6">
+              <ul>
+                <li><strong>prova</strong></li>
+                <li>prova</li>
+                <li>prova</li>
+                <li>prova</li>
+                <li>prova</li>
+              </ul>
+            </div>
+            <div class="col-sx-12 col-sm-12 col-md-6">
+              <ul>
+                <li><strong>prova</strong></li>
+                <li>prova</li>
+                <li>prova</li>
+                <li>prova</li>
+                <li>prova</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
