--- a/index.html
+++ b/index.html
@@ -13,30 +13,36 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <div class="row">
           <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
-              <div class="navbar-header">
-                <a href="index.html" class="navbar-brand">LOGO DIGITAL OCEAN</a>
-                <button class="navbar-toggle collapsed">
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-              </div>
-              <div class="collapse navbar-collpse">
-                <ul class="nav navbar-nav">
-                <li> <a href="#">products</a></li>
-                <li><a href="#">customers</a></li>
-                <li> <a href="#">community</a></li>
-                <li> <a href="#">pircing</a></li>
-                </ul>
+              <div class="row">
+                <div class="navbar-header">
+                  <a href="index.html" class="navbar-brand">
+                    <img src="img/digital-ocean-logo.png" alt="">
+                  </a>
+                  <button id="tablet_menu" class="navbar-toggle collapsed pull-right">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                </div>
+                <div class="collapse navbar-collapse">
+                  <ul id="collapsed_list1" class="nav navbar-nav">
+                  <li> <a  href="#">products<span class="glyphicon glyphicon-menu-down"></span></a></li>
+                  <li><a href="#">customers</a></li>
+                  <li> <a href="#">community<span class="glyphicon glyphicon-menu-down"></span></a></li>
+                  <li> <a href="#">pircing</a></li>
+                  </ul>
+                  <ul id="collapsed_list2" class="nav navbar-nav pull-right">
+                  <li> <a  href="#">Docs</a></li>
+                  <li><a href="#">Support<span class="glyphicon glyphicon-menu-down"></a></li>
+                  <li> <a href="#">Login</a></li>
+                  <li> <a class="btn" href="#">Sign Up</a></li>
+                  </ul>
+                </div>
               </div>
             </div>
           </nav>
-        </div>
-      </div>
       <div class="bg_header">
         <div class="container">
           <div class="row">
@@ -482,6 +488,7 @@
           </div>
         </div>
       </div>
+      <!-- TODO manca lo squalo  -->
     </footer>
   </body>
 </html>
