--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <li> <a  href="#">Docs</a></li>
                   <li><a href="#">Support<span class="glyphicon glyphicon-menu-down"></a></li>
                   <li> <a href="#">Login</a></li>
-                  <li> <a class="btn" href="#">Sign Up</a></li>
+                  <li> <a id="login" class="btn" href="#">Sign Up</a></li>
                   </ul>
                 </div>
               </div>
@@ -45,14 +45,14 @@
           </nav>
       <div class="bg_header">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-7 jumbotron">
+          <div class="row box_header">
+            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 jumbotron">
               <h1>Ciao mondo pazzo!</h1>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nulla quia, ab illo obcaecati consequuntur hic distinctio rerum a fugit.
               </p>
             </div>
-            <div class="col-lg-5 jumbotron">
+            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 jumbotron">
               <form>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Email address</label>
