--- a/index.html
+++ b/index.html
@@ -46,33 +46,37 @@
       <div class="bg_header">
         <div class="container">
           <div class="row box_header">
-            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 jumbotron">
-              <h1>Ciao mondo pazzo!</h1>
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 jumbotron title_header">
+              <h1>The simplest cloud platform for developers & teams</h1>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nulla quia, ab illo obcaecati consequuntur hic distinctio rerum a fugit.
               </p>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 jumbotron">
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 google_login">
+              <h3 class="text-center">
+                Deploy yoyr app in seconds.
+              </h3>
+              <h3  class="text_blue text-center">
+                Get starded now.
+              </h3>
               <form>
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Email address</label>
                   <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputPassword1">Password</label>
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputFile">File input</label>
-                  <input type="file" id="exampleInputFile">
-                  <p class="help-block">Example block-level help text here.</p>
+                <button type="submit" class="btn btn-default create_account">Create your account</button>
+                <div class="btn_google_acount">
+                  <div class="google_logo">
+                    <img src="img/icon-google.svg" alt="">
+                  </div>
+                  <button type="submit" class="btn btn-default login_google">
+                    Sing up with Google.
+                  </button>
                 </div>
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox"> Check me out
-                  </label>
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <p class="text-center"><small>by signing you agre to the <a href="">Terms of service.</a></small></p>
               </form>
             </div>
           </div>
