link google form
ho aggiuntop <a> al simgolo googl edel form nell'header

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <button type="submit" class="btn btn-default create_account">Create your account</button>
                 <div class="btn_google_acount">
                   <div class="google_logo">
-                    <img src="img/icon-google.svg" alt="">
+                    <a href="https://www.google.com/"><img src="img/icon-google.svg" alt=""></a>
                   </div>
                   <button type="submit" class="btn btn-default login_google">
                     Sing up with Google.
