--- a/index.html
+++ b/index.html
@@ -86,22 +86,20 @@
     <!-- /header -->
     <!-- main -->
     <main>
-      <section class="bg_sponsor jumbotron">
+      <section class="bg_white_grey jumbotron">
         <div class="container">
           <row>
-            <h4 class="col-lg-12 text-center text-capitalize text-muted">testo sponsor</h4>
+            <h4 class="col-lg-12 text-center text-uppercase text-muted">innovatice business trust digitalocean</h4>
           </row>
           <row>
-            <img src="" alt="" class="col-lg-2">
-            <img src="" alt="" class="col-lg-2">
-            <img src="" alt="" class="col-lg-2">
-            <img src="" alt="" class="col-lg-2">
-            <img src="" alt="" class="col-lg-2">
-            <img src="" alt="" class="col-lg-2">
+            <img src="img/docker-logo.svg" alt="" class="col-sm-6 col-md-2 col-lg-2">
+            <img src="img/gitlab-logo.svg" alt="" class="col-sm-6 col-md-2 col-lg-2">
+            <img src="img/slack-logo.svg" alt="" class="col-sm-6 col-md-2 col-lg-2">
+            <img src="img/hashicorp-logo.svg" alt="" class="col-sm-6 col-md-2 col-lg-2">
+            <img src="img/hashicorp-logo.svg" alt="" class="col-sm-6 col-md-2 col-lg-2">
+            <img src="img/splunk-logo.svg" alt="" class="col-sm-6 col-md-2 col-lg-2">
           </row>
-          <row>
-            <a class="text-center" href="#">View customer stories</a>
-          </row>
+
         </div>
       </section>
       <!-- optimize configuration section -->
@@ -144,7 +142,7 @@
       </section>
       <!-- /optimisize config section -->
       <!-- carousel section jumbo -->
-      <section class="jumbotron">
+      <section class="bg_white_grey jumbotron">
         <div class="container">
           <div class="row">
             <div class="col-lg-12 text-center">
