--- a/index.html
+++ b/index.html
@@ -142,22 +142,22 @@
       </section>
       <!-- /optimisize config section -->
       <!-- carousel section jumbo -->
-      <section class="bg_white_grey jumbotron">
+      <section class="bg_white_grey carousels_section">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
               <h2 class="text-capitalize">disigned for developers</h2>
               <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, tempore accusantium velit, eius consequatur magnam.</p>
             </div>
-              <div class="carousel_1">
+              <div class="carousels ps_relative">
                 <div class="col-sm-2 col-md-2 col-lg-2">
-                  <i class="fas fa-angle-left text-muted"></i>
+                  <a href=""><i class="fas fa-angle-left text-muted"></i></a>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                   <img src="img/developer-img.jpg" alt="">
                 </div>
                 <div class="col-sm-2 col-md-2 col-lg-2">
-                  <i class="fas fa-angle-right text-muted"></i>
+                  <a href=""><i class="fas fa-angle-right text-muted"></i></a>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
@@ -377,22 +377,22 @@
       <!-- /cities connection section -->
       <!-- carousel 2 -->
       <!-- carousel2 -->
-      <section class="bg_white_grey jumbotron">
+      <section class="bg_white_grey carousels_section">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
               <h2 class="text-capitalize">disigned for developers</h2>
               <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, tempore accusantium velit, eius consequatur magnam.</p>
             </div>
-              <div class="carousel_1">
+              <div class="carousels ps_relative">
                 <div class="col-sm-2 col-md-2 col-lg-2">
-                  <i class="fas fa-angle-left text-muted"></i>
+                  <a href=""><i class="fas fa-angle-left text-muted"></i></a>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                   <img src="img/developer-img.jpg" alt="">
                 </div>
                 <div class="col-sm-2 col-md-2 col-lg-2">
-                  <i class="fas fa-angle-right text-muted"></i>
+                  <a href=""><i class="fas fa-angle-right text-muted"></i></a>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
