esercizio completato al 90 %
manca il bot da sistemare e una img degli sponsor per renderla responsive smartphone

--- a/index.html
+++ b/index.html
@@ -423,62 +423,83 @@
       </div>
       <!-- /get starded section -->
     </main>
-    <footer class="bg_darkblue text_white">
+    <footer class="bg_darkblue text_grey">
       <div class="container">
         <div class="row">
-          <div class="col-sx-12 col-sm-12 col-md-6">
+          <div class="col-sx-12 col-sm-12 col-md-12 col-lg-4">
             <ul>
-              <li><strong>prova</strong></li>
-              <li>prova</li>
-              <li>prova</li>
-              <li>prova</li>
-              <li>prova</li>
+              <li><img src="img/digitalocean-footer-logo.svg" alt=""></li>
+              <li><i class="far fa-copyright"></i> DigitalOcean, LLC. All rights reserved.</li>
+              <li>Proudly made in NY</li>
+              <li>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-instagram-square"></i>
+                <i class="fab fa-youtube"></i>
+              </li>
             </ul>
           </div>
-          <div class="col-sx-12 col-sm-12 col-md-6">
+          <div class="col-sx-12 col-sm-12 col-md-6 col-lg-2">
             <ul>
-              <li><strong>prova</strong></li>
-              <li>prova</li>
-              <li>prova</li>
-              <li>prova</li>
-              <li>prova</li>
+              <li class="text_white"><strong>Company</strong></li>
+              <li class="text-capitalize">about</li>
+              <li class="text-capitalize">leadership</li>
+              <li class="text-capitalize">link</li>
+              <li class="text-capitalize">blog</li>
+              <li class="text-capitalize">careers</li>
+              <li class="text-capitalize">partner network</li>
+              <li class="text-capitalize">referral program</li>
+              <li class="text-capitalize">events</li>
+              <li class="text-capitalize">press</li>
+              <li class="text-capitalize">legal & security</li>
             </ul>
           </div>
-          <div class="col-sx-12 col-sm-12 col-md-6">
+          <div class="col-sx-12 col-sm-12 col-md-6 col-lg-2">
             <ul>
-              <li><strong>prova</strong></li>
-              <li>prova</li>
-              <li>prova</li>
-              <li>prova</li>
-              <li>prova</li>
+              <li class="text_white"><strong>Products</strong></li>
+              <li class="text-capitalize">droplets</li>
+              <li class="text-capitalize">spaces</li>
+              <li class="text-capitalize">kubemets</li>
+              <li class="text-capitalize">load balancers</li>
+              <li class="text-capitalize">block storage</li>
+              <li class="text-capitalize">tool & integrations</li>
+              <li class="text-capitalize"> one-click apps</li>
+              <li class="text-uppercase">api</li>
+              <li class="text-capitalize">pricing</li>
+              <li class="text-capitalize">documentation</li>
+              <li class="text-capitalize">release notes</li>
             </ul>
           </div>
-          <div class="col-sx-12 col-sm-12 col-md-6">
+          <div class="col-sx-12 col-sm-12 col-md-6 col-lg-2">
             <ul>
-              <li><strong>prova</strong></li>
-              <li>prova</li>
-              <li>prova</li>
-              <li>prova</li>
-              <li>prova</li>
+              <li class="text_white text-capitalize"><strong>prova</strong></li>
+              <li class="text-capitalize">tutorials</li>
+              <li class="text-capitalize">meetups</li>
+              <li class="text-uppercase">q&a</li>
+              <li class="text-capitalize">write for donations</li>
+              <li class="text-capitalize"> droplets for demos</li>
+              <li class="text-capitalize">hatch</li>
+              <li class="text-capitalize">shop swag</li>
+              <li class="text-capitalize">researh program</li>
+              <li class="text-capitalize">currents research</li>
+              <li class="text-capitalize">open source</li>
             </ul>
           </div>
-          <div class="col-sx-12 col-sm-12 col-md-6">
+          <div class="col-sx-12 col-sm-12 col-md-6 col-lg-2">
             <ul>
-              <li><strong>prova</strong></li>
-              <li>prova</li>
-              <li>prova</li>
-              <li>prova</li>
-              <li>prova</li>
+              <li class="text_white text-capitalize"><strong>support</strong></li>
+              <li class="text-capitalize">contact support</li>
+              <li class="text-uppercase">faq</li>
+              <li class="text-capitalize">network status</li>
             </ul>
           </div>
-          <div class="col-sx-12 col-sm-12 col-md-6">
-            <ul>
-              <li><strong>prova</strong></li>
-              <li>prova</li>
-              <li>prova</li>
-              <li>prova</li>
-              <li>prova</li>
-            </ul>
+          <div id="bot_footer" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-lg-offset-10">
+            <div class="ps_relative">
+              <div class="notice_dot text_white">
+                <img src="img/bot-footer.jpg" alt="">
+                <span class="text-white text-center">1</span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
