--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Digital Ocean</title>
   </head>
   <body>
@@ -28,16 +28,34 @@
                 </div>
                 <div class="collapse navbar-collapse">
                   <ul id="collapsed_list1" class="nav navbar-nav">
-                  <li> <a  href="#">products<span class="glyphicon glyphicon-menu-down"></span></a></li>
-                  <li><a href="#">customers</a></li>
-                  <li> <a href="#">community<span class="glyphicon glyphicon-menu-down"></span></a></li>
-                  <li> <a href="#">pircing</a></li>
+                  <li>
+                    <a  href="#">products<span class="glyphicon glyphicon-menu-down"></span></a>
+                  </li>
+                  <li>
+                    <a href="#">customers</a>
+                  </li>
+                  <li>
+                    <a href="#">community<span class="glyphicon glyphicon-menu-down"></span></a>
+                  </li>
+                  <li>
+                    <a href="#">pircing</a>
+                  </li>
                   </ul>
                   <ul id="collapsed_list2" class="nav navbar-nav pull-right">
-                  <li> <a  href="#">Docs</a></li>
-                  <li><a href="#">Support<span class="glyphicon glyphicon-menu-down"></a></li>
-                  <li> <a href="#">Login</a></li>
-                  <li> <a id="login" class="btn" href="#">Sign Up</a></li>
+                  <li>
+                    <a  href="#">Docs</a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Support<span class="glyphicon glyphicon-menu-down">
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">Login</a>
+                  </li>
+                  <li>
+                    <a id="login" class="btn" href="#">Sign Up</a>
+                  </li>
                   </ul>
                 </div>
               </div>
@@ -54,7 +72,7 @@
             </div>
             <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 google_login">
               <h3 class="text-center">
-                Deploy yoyr app in seconds.
+                Deploy your app in seconds.
               </h3>
               <h3  class="text_blue text-center">
                 Get starded now.
@@ -67,16 +85,18 @@
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
                 <div class="form-group">
-                <button type="submit" class="btn btn-default create_account">Create your account</button>
-                <div class="btn_google_acount">
-                  <div class="google_logo">
-                    <a href="https://www.google.com/"><img src="img/icon-google.svg" alt=""></a>
+                  <button type="submit" class="btn btn-default create_account">Create your account</button>
+                  <div class="btn_google_acount">
+                    <div class="google_logo">
+                      <a href="https://www.google.com/"><img src="img/icon-google.svg" alt="">
+                      </a>
+                    </div>
+                    <button type="submit" class="btn btn-default login_google">
+                      Sing up with Google.
+                    </button>
                   </div>
-                  <button type="submit" class="btn btn-default login_google">
-                    Sing up with Google.
-                  </button>
+                  <p class="text-center"><small>by signing you agre to the <a href="">Terms of service.</a></small></p>
                 </div>
-                <p class="text-center"><small>by signing you agre to the <a href="">Terms of service.</a></small></p>
               </form>
             </div>
           </div>
@@ -88,18 +108,15 @@
     <main>
       <section class="bg_white_grey jumbotron">
         <div class="container sponsor">
-          <row>
-            <h4 class="col-lg-12 text-center text-uppercase text-muted">innovatice business trust digitalocean</h4>
-          </row>
-          <row>
+          <div class="row">
+            <h4 class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center text-uppercase text-muted">innovatice business trust digitalocean</h4>
             <img src="img/docker-logo.svg" alt="" class="col-xs-6 col-sm-6 col-md-4 col-lg-2">
             <img src="img/gitlab-logo.svg" alt="" class="col-xs-6 col-sm-6 col-md-4 col-lg-2">
             <img src="img/slack-logo.svg" alt="" class="col-xs-6 col-sm-6 col-md-4 col-lg-2">
             <img src="img/hashicorp-logo.svg" alt="" class="col-xs-6 col-sm-6 col-md-4 col-lg-2">
             <img src="img/hashicorp-logo.svg" alt="" class="col-xs-6 col-sm-6 col-md-4 col-lg-2">
             <img src="img/splunk-logo.svg" alt="" class="col-xs-6 col-sm-6 col-md-4 col-lg-2">
-          </row>
-
+          </div>
         </div>
       </section>
       <!-- optimize configuration section -->
@@ -371,8 +388,9 @@
                 </div>
               </div>
             </div>
-            <!-- /colonnadx blue -->
+          </div>
         </div>
+        <!-- /colonnadx blue -->
       </section>
       <!-- /cities connection section -->
       <!-- carousel 2 -->
