sito al 99% responsive
manca il bot responsive. sono riuscito a collocarlo secondo le mie disposzioni ma manca il messagio del bot.

--- a/index.html
+++ b/index.html
@@ -516,6 +516,9 @@
               <div class="notice_dot text_white">
                 <img src="img/bot-footer.jpg" alt="">
                 <span class="text-white text-center">1</span>
+                <div class="text_bot text_blue">
+                  <p>Click on me if you need help!</p>
+                </div>
               </div>
             </div>
           </div>
